WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48092
Crash evaluating JavaScript string that throws an exception
https://bugs.webkit.org/show_bug.cgi?id=48092
Summary
Crash evaluating JavaScript string that throws an exception
Anders Carlsson
Reported
2010-10-21 14:33:01 PDT
Crash evaluating JavaScript string that throws an exception
Attachments
Patch
(10.02 KB, patch)
2010-10-21 14:37 PDT
,
Anders Carlsson
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2010-10-21 14:36:00 PDT
<
rdar://problem/8487657
>
Anders Carlsson
Comment 2
2010-10-21 14:37:22 PDT
Created
attachment 71495
[details]
Patch
Adam Roben (:aroben)
Comment 3
2010-10-21 14:40:06 PDT
Comment on
attachment 71495
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=71495&action=review
> WebKitTools/ChangeLog:15 > + (TestWebKitAPI::TEST):
I've been replacing this line with TestWebKitAPI::WebKit2_EvaluateJavaScript (e.g.).
> WebKitTools/TestWebKitAPI/Tests/WebKit2/EvaluateJavaScript.cpp:42 > + // FIXME: We should also check the error, but right now it's always null.
Maybe you should TEST_ASSERT that it is null. Then we will have something reminding us we need to update this test when we make it be non-null!
Anders Carlsson
Comment 4
2010-10-21 14:48:08 PDT
Committed
r70267
: <
http://trac.webkit.org/changeset/70267
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug